--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="ace-hearts.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Symbols+Outlined">
 </head>
 <body>
   <app-root></app-root>
